--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,8 @@
 .navbar-list{display: flex;justify-content: space-around;margin-right: 20px;}
 .navbar-list li {margin-right: 20px;list-style: none;}
 .navbar-list li a{text-decoration: none;}
+.navbar-list li a:hover{color: #E02C6D;font-weight: 600;}
+
 /* camera */
 .camera{display: flex;justify-content: space-between;align-items: center;gap: 10px;max-width: 90%;margin: 30px auto;}
 .cam-left{width: 45%;}
@@ -30,6 +32,7 @@
 .cam-left h2{font-size: 50px;font-weight: bold;}
 .cam-left h5{margin-bottom: 15px;}
 .btn{background-color: #E02C6D;font-weight: 400;color: white;border:none;padding: 10px 20px;border-radius: 4px;font-size: 14px;font-weight: 500;}
+.btn:hover{background-color: #fd025e;color:paleturquoise;}
 /* company */
 .company{max-width: 85%;margin: 50px auto;}
 .logo{display: flex;justify-content: space-around;border: 3px solid rgb(247, 244, 244);padding:20px}
